--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,6 +6,31 @@
   width: 100px;
 }
 
+div.inputTask form {
+  margin: 0;
+}
+
+div.inputTask input[type='checkbox'] {
+  float: left;
+  margin-top: 10px;
+}
+
+div.inputTask span {
+  display: block;
+  overflow: hidden;
+  padding-left: 20px;
+}
+
+input.readTask {
+  border-color: transparent;
+  box-shadow: none;
+  background-color: transparent !important;
+}
+
+.editTask {
+  border-color: blue;
+}
+
 #itemsLeftCount {
   padding-left: 20px;
 }
