add strikethrough on completing task

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -27,6 +27,10 @@ input.readTask {
   background-color: transparent !important;
 }
 
+.strike {
+  text-decoration: line-through;
+}
+
 .editTask {
   border-color: blue;
 }
