--- a/public/css/master.css
+++ b/public/css/master.css
@@ -35,6 +35,10 @@ input.editable {
   text-decoration: line-through;
 }
 
+.footer > p {
+  font-style: italic;
+  font-size: 0.9em;
+}
 
 #itemsLeftCount {
   padding-left: 20px;
